<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/username"
            android:layout_marginLeft="10dp"
            android:layout_width="280dp"
            android:layout_height="45dp"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="65dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dob" />

        <EditText
            android:id="@+id/dob"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:layout_width="120dp"
            android:layout_height="45dp"/>

        <TextView
            android:layout_width="65dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/age" />

        <EditText
            android:id="@+id/age"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="60dp"
            android:layout_height="45dp"/>

    </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <TextView
                android:layout_width="65dp"
                android:layout_height="29dp"
                android:gravity="center"
                android:text="@string/address"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"/>

        </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/educationalqualification"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/educationalqualification"
            android:layout_width="260dp"
            android:layout_gravity="center"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="65dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:text="@string/sslc" />

        <EditText
            android:id="@+id/sslc"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:text="/"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:id="@+id/fivehund"/>

        <EditText
            android:id="@+id/sslct"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">
        <Button
            android:id="@+id/sslcper"
            android:layout_marginLeft="5dp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="Per"/>


        <TextView
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/viewsslcper"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="65dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:text="@string/hsc" />

        <EditText
            android:id="@+id/hsc"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:text="/"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:id="@+id/twelhund"/>

        <EditText
            android:id="@+id/hsct"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">
        <Button
            android:id="@+id/hscper"
            android:layout_marginLeft="5dp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="Per"/>

        <TextView
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/viewhscper"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="65dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:text="@string/ug" />

        <EditText
            android:id="@+id/ug"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:text="/"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:id="@+id/thnihund"/>

        <EditText
            android:id="@+id/ugt"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">
        <Button
            android:id="@+id/ugper"
            android:layout_marginLeft="5dp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="Per"/>

        <TextView
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/viewugper"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="65dp"
            android:layout_gravity="center"
            android:layout_height="29dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:text="@string/pg" />

        <EditText
            android:id="@+id/pg"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="29dp"
            android:textStyle="bold"
            android:text="/"
            android:layout_marginLeft="5dp"
            android:id="@+id/ten"/>

        <EditText
            android:id="@+id/pgt"
            android:layout_width="90dp"
            android:layout_height="45dp"

            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">


        <Button
            android:id="@+id/pgper"
            android:layout_marginLeft="5dp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="Per"/>

        <TextView
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:id="@+id/viewpgper"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/save"
            android:layout_marginLeft="15dp"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="Save"/>


    </LinearLayout>

</LinearLayout>